--- a/ReactiveUI.Samples.Wpf/ReactiveUI.Samples.Wpf.csproj
+++ b/ReactiveUI.Samples.Wpf/ReactiveUI.Samples.Wpf.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows10.0.19041</TargetFramework>
     <!--<Nullable>enable</Nullable>-->
     <UseWPF>true</UseWPF>
@@ -22,6 +22,10 @@
     <None Update="Views\MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\" />
   </ItemGroup>
 
 </Project>
