--- a/ReactiveUI.Samples.Wpf/ReactiveUI.Samples.Wpf.csproj
+++ b/ReactiveUI.Samples.Wpf/ReactiveUI.Samples.Wpf.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.5" />
